--- a/src/css/header.css
+++ b/src/css/header.css
@@ -8,40 +8,45 @@ body{
     font-family: 'Nunito', sans-serif;
 }
 .active{
-    border-bottom: 2px solid #0069c0 ;
+    color: #000 !important;
+    border-bottom: 2px solid #000;
 }
 /* MOBILE */
 @media screen and (max-width:1000px){  
-    .ulItems{
+    .ulContainer{
         position: absolute;
         top:-100%;
-        transition: top 1s;
+        transition: top .5s;
         width: 100%;
         height: 100%;
         z-index: 1;
+    }
+    .ulItems{
         background-color: #fefefe;
+        height: 100%;
     }
     .ulItems>li{
         padding: 10px 0 ;
     }
     .btnToggle{
-        z-index: 2;
         position: relative;
-        background-color: #fff;
+        color: white;
+        background-color: #759EFF;
         border: none;
     }
     .navContainer{
-        background-color: #fefefe;
+        background-color: #759EFF;
+        z-index: 5;
     }
     .ulItems>li>a:hover{
-        color: black !important;
+        color: black ;
     }
     .ulItems>li>a{
-        color: #000 !important;
+        color: #000 ;
         
     }
     .ulItems>li>button{
-        color: brown !important;
+        color: brown ;
         
     }
     .text-logout{
@@ -52,11 +57,20 @@ body{
         color: white;
         border-radius: 50%;
         padding: 0 5px;
-        
+    }
+    .title{
+        display: block;
+        margin: 0;
     }
 }
 /* DESKTOP */
 @media screen and (min-width:1001px){
+    nav{
+        background-color: #759EFF;
+    }
+    .title{
+        display: none;
+    }
     .ulItems{
         display: flex;
         justify-content: center;
@@ -65,20 +79,24 @@ body{
     .btnToggle{
         display: none;
     }
+    .ulItems>li:hover{
+        transform: scale(1.1);
+    }
     .ulItems>li{
+        transition: transform .1s;
         padding: 0 15px;
     }
     .ulItems>li>a:hover{
-        color: #0069c0 !important;
+        color: #000 ;
+        transform: scale(1.1);
     }
     .ulItems>li>a{
-        color: #555 !important;
+        color: #333 ;
        
     }
     .navContainer{
         box-shadow: 0 4px 8px rgb(0 0 0 / 8%);
         padding: 15px;
-        margin-top: 10px;
     }
     .topNav{
         height: 10px;
@@ -86,6 +104,9 @@ body{
     }
     .icon-logout{
         display: none;
+    }
+    .text-logout{
+        color:#333;
     }
     .text-logout:hover{
         color: brown;
